# zerobus-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NEXT_CHANGELOG.md  README.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  feature_request.yml  sdk-issue.yml  task.yml
.github/workflows/: ci-go.yml  ci-java.yml  ci-py.yml  ci-python.yml  ci-rust.yml  ci-typescript.yml  issue-label.yml  push.yml  release-ffi.yml  release-go.yml  release-java.yml  release-jni.yml  release-py.yml  release-python.yml  release-typescript.yml
examples/: README.md
examples/basic_example_json/src/: main.rs
examples/basic_example_json_batch/: Cargo.toml
examples/basic_example_json_batch/src/: main.rs
examples/basic_example_proto/src/: main.rs
examples/basic_example_proto_batch/: Cargo.toml
examples/basic_example_proto_batch/output/: orders.descriptor  orders.rs
examples/basic_example_proto_batch/src/: main.rs
examples/json/batch/src/: main.rs
examples/json/single/: Cargo.toml
examples/json/single/src/: main.rs
examples/nested_example_proto/: Cargo.toml  build.rs
examples/nested_example_proto/output/: orders.descriptor  orders.proto  orders.rs
examples/nested_example_proto/src/: main.rs
examples/proto/batch/: Cargo.toml
examples/proto/batch/src/: main.rs
examples/proto/single/: Cargo.toml
examples/proto/single/src/: main.rs
ffi/: Cargo.toml  cbindgen.toml  zerobus.h
ffi/src/: lib.rs  tests.rs
go/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEXT_CHANGELOG.md  README.md  ack.go  arrow_ffi.go  arrow_stream.go  build.go  build_rust.sh  ffi.go  go.mod  types.go  zerobus.go
go/examples/: README.md
go/examples/arrow/: go.mod  main.go
go/examples/json/batch/: go.mod  main.go
go/examples/json/single/: go.mod  main.go
go/examples/proto/: air_quality.proto  generate_proto.sh  go.mod  go.sum
go/examples/proto/batch/: go.mod  main.go
go/examples/proto/pb/: air_quality.pb.go
go/examples/proto/single/: go.mod  main.go
go/tests/: arrow_integration_test.go  arrow_mock_server.go  go.mod  integration_test.go  mock_server.go  test_helpers.go  zerobus_service.proto
go/tests/pb/: zerobus_service.pb.go  zerobus_service_grpc.pb.go
go/zerobus-ffi/: Cargo.toml
java/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NEXT_CHANGELOG.md  README.md  pom.xml
java/examples/: README.md
java/examples/arrow/: ArrowIngestionExample.java
java/examples/json/: README.md
java/examples/legacy/: README.md
java/examples/proto/: README.md
java/src/main/java/com/databricks/zerobus/: ArrowStreamConfigurationOptions.java  NativeLoader.java  ZerobusArrowStream.java  ZerobusSdk.java
java/src/main/java/com/databricks/zerobus/tools/: GenerateProto.java
java/src/test/java/com/databricks/zerobus/: ArrowIntegrationTest.java
jni/: Cargo.toml
jni/src/: arrow_stream.rs  async_bridge.rs  callbacks.rs  lib.rs  options.rs  sdk.rs  stream.rs
python/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEXT_CHANGELOG.md  README.md  pyproject.toml
python/examples/: README.md  async_example_arrow.py  async_example_json.py  async_example_proto.py  record_pb2.py  sync_example_arrow.py  sync_example_json.py  sync_example_proto.py
python/rust/: Cargo.toml
python/rust/src/: arrow.rs  async_wrapper.rs  auth.rs  common.rs  lib.rs  sync_wrapper.rs
python/tests/: test_arrow.py  test_generate_proto.py  test_row.proto  test_row_pb2.py  test_smoke.py
python/zerobus/: __init__.py  _zerobus_core.pyi
python/zerobus/sdk/: __init__.py
python/zerobus/sdk/aio/: __init__.py  zerobus_sdk.py
python/zerobus/sdk/shared/: __init__.py  arrow.py  config.py  headers_provider.py
python/zerobus/sdk/sync/: __init__.py  zerobus_sdk.py
python/zerobus/tools/: generate_proto.py
rust/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEXT_CHANGELOG.md  README.md
rust/examples/: README.md
rust/examples/json/: README.md
rust/examples/json/batch/: Cargo.toml
rust/examples/json/batch/src/: main.rs
rust/examples/json/single/src/: main.rs
rust/examples/proto/: README.md
rust/examples/proto/batch/output/: orders.proto
rust/examples/proto/batch/src/: main.rs
rust/examples/proto/single/src/: main.rs
rust/ffi/: Cargo.toml  README.md  cbindgen.toml  zerobus.h
rust/ffi/src/: lib.rs
rust/jni/: Cargo.toml
rust/jni/src/: callbacks.rs  errors.rs  runtime.rs
rust/sdk/: Cargo.toml  zerobus_service.proto
rust/sdk/src/: arrow_stream.rs  errors.rs  headers_provider.rs  lib.rs  proxy.rs  record_types.rs  stream_configuration.rs
rust/sdk/src/builder/: mod.rs  sdk_builder.rs
rust/tests/: Cargo.toml
rust/tests/src/: proxy_tests.rs
rust/tools/generate_files/: Cargo.toml  README.md
rust/tools/generate_files/src/: generate.rs
sdk/: Cargo.toml
sdk/src/: arrow_config.rs  arrow_metadata.rs  arrow_stream.rs  callbacks.rs  default_token_factory.rs  errors.rs  headers_provider.rs  lib.rs  stream_configuration.rs  stream_options.rs  tls_config.rs
sdk/src/builder/: arrow_stream_builder.rs  mod.rs  sdk_builder.rs  stream_builder.rs
tests/: Cargo.toml  build.rs
tests/src/: mock_arrow_flight.rs  mock_grpc.rs  rust_tests.rs  utils.rs
tools/generate_files/: Cargo.toml  README.md
tools/generate_files/src/: generate.rs
ts/: Cargo.toml  README.md  package.json
ts/examples/: README.md
ts/examples/arrow/: README.md  batch.ts  single.ts
ts/examples/json/: README.md  batch.ts  single.ts
ts/examples/proto/: batch.ts  single.ts
ts/src/: lib.rs
ts/test/: integration.test.ts
typescript/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEXT_CHANGELOG.md  NOTICE  README.md  package-lock.json  package.json
typescript/examples/: README.md
typescript/examples/json/: batch.ts  single.ts
typescript/examples/proto/: README.md  batch.ts
typescript/src/: lib.rs
typescript/test/: integration.test.ts  unit.test.ts
