[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "databricks-zerobus-ingest-sdk"
dynamic = ["version"]
description = "Databricks Zerobus Ingest SDK for Python"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["zerobus", "databricks", "sdk"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf>=4.25.0,<7.0",
    "requests>=2.28.1,<3",
]

[project.optional-dependencies]
arrow = [
    "pyarrow>=14.0.0",
]
dev = [
    # Build tools
    "wheel",
    "build",
    "grpcio-tools>=1.60.0,<2.0",
    # Code formatting
    "black",
    "pycodestyle",
    "autoflake",
    "isort",
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.6.1,<4.0",
    "pytest-asyncio",
    "pyarrow>=14.0.0",
]

[tool.maturin]
python-source = "."
module-name = "zerobus._zerobus_core"
features = ["pyo3/extension-module"]
include = [{path = "NOTICE", format = "sdist"}]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 120
