[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "rust_tests"
path = "src/rust_tests.rs"

[dependencies]
async-trait = "0.1"
prost = "0.13.3"
prost-reflect = "0.14"
prost-types = "0.13.3"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tonic = { version = "0.13", features = ["tls-native-roots", "transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
databricks-zerobus-ingest-sdk = { path = "../sdk", features = ["testing", "arrow-flight"] }

# Arrow Flight test dependencies
arrow-flight = { version = "56.2.0", default-features = false }
arrow-array = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3.0.0"
