[package]
name = "example_proto_batch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
databricks-zerobus-ingest-sdk = { path = "../../../sdk" }
tonic-prost-build = "0.14"
prost = "0.14"
prost-reflect = "0.16"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.14"
tracing = "0.1.41"
chrono = "0.4"
